# pd-toolkit

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  array-define.txt  build.rs  deny.toml
.github/scripts/: bump-version.sh
.github/workflows/: ci.yml  release.yml  validate.yml
docs/: ai-setup.md
scripts/: install-pdtk.sh
skills/edit-and-lint-pd/: SKILL.md  editing.md  inspection.md  layout.md  search.md  subpatch-batch.md
skills/pd-safe-editing-mseq/: SKILL.md
skills/pd-safe-editing-mseq/references/: checklists.md  workflow.md
src/: cli.rs  errors.rs  io.rs  lib.rs  main.rs  model.rs  rewrite.rs
src/analysis/: buses.rs  deps.rs  diff.rs  graph.rs  mod.rs  send_receive.rs  trace.rs
src/commands/: arrays.rs  batch.rs  common.rs  connect.rs  connections.rs  delete.rs  deps.rs  diff.rs  disconnect.rs  extract.rs  find_displays.rs  find_orphans.rs  format.rs  insert.rs  lint.rs  list.rs  mod.rs  modify.rs  new.rs  parse.rs  rename_send.rs  renumber.rs  search.rs  stats.rs  structs.rs  subpatch.rs  trace.rs  validate.rs
src/layout/: crossing.rs  graph.rs  layer.rs  mod.rs  place.rs
src/parser/: classify.rs  escape.rs  index.rs  mod.rs  tokenizer.rs
src/types/: signatures.rs
tests/: check_bump_version.sh  check_corpus_drift.sh  expected.json  helpers.rs  run_tests.sh  test_arrays.rs  test_arrays_property.proptest-regressions  test_arrays_property.rs  test_batch.rs  test_canvas_scope.rs  test_connect.rs  test_connections.rs  test_delete.rs  test_deps.rs  test_deps_externals.rs  test_diff.rs  test_disconnect.rs  test_encoding.rs  test_extract.rs  test_find_displays.rs  test_find_orphans.rs  test_format.rs  test_insert.rs  test_lint.rs  test_list.rs  test_modify.rs  test_new.rs  test_parse.rs  test_parser.rs  test_pd_else.rs  test_rename_send.rs  test_renumber.rs  test_search.rs  test_stats.rs  test_structs.rs  test_subpatch.rs  test_trace.rs  test_validate.rs
tests/fixtures/: MANIFEST.md
tests/fixtures/abstractions/: contract_inner.pd  unused_abs.pd  used_abs.pd  uses_abstractions.pd
tests/fixtures/corpus/: array_define_real.pd  c_entry_real.pd  complex_nested_real.pd  declare_real.pd  deep_nesting_real.pd  escaped_dollar_real.pd  escaped_semicolons_real.pd  floatatom_real.pd  graph_array_real.pd  graph_subpatch_real.pd  minimal_real.pd  multiline_msg_real.pd  send_receive_real.pd  simple_chain_real.pd  symbolatom_real.pd  width_hint_real.pd
tests/fixtures/deps_externals/: compiled_obj.pd_linux  lua_lib_obj.pd_luax  lua_obj.pd_lua  main.pd  pat_obj.pat
tests/fixtures/deps_externals/folder_obj/: folder_obj.pd
tests/fixtures/handcrafted/: all_gui_types.pd  array_in_canvas.pd  arrays.pd  branching.pd  classic_array_save_flags.pd  cycle.pd  deep_subpatch.pd  deps_builtin_aliases.pd  displays.pd  dollar_signs.pd  dsp_loop_lint.pd  escaped_chars.pd  escaped_semicolons.pd  fan_out_lint.pd  float_vs_width.pd  graph_and_pd_subpatches.pd  large_patch.pd  listbox_send_receive.pd  malformed_bad_connection.pd  malformed_missing_semicolon.pd  merging.pd  multi_struct_before_canvas.pd  multiline_obj.pd  multiple_subpatches.pd  nested_subpatch.pd  not_a_patch.pd_lua  orphans.pd  radio_compat_hdl_vdl.pd  send_receive.pd  send_receive_lint.pd  sibling_subpatches.pd  signal_chain.pd  simple_chain.pd  struct_after_canvas.pd  struct_before_canvas.pd  subpatch_delete.pd  trace_send_receive_hop.pd  with_c_entry.pd  with_declare.pd  with_graph.pd  (+1 more)
tests/fixtures/pd_else/: ATTRIBUTION.md
tests/integration/: mod.rs
